--- a/online/main.html
+++ b/online/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grilli - Amazing & Delicious Food</title>
+    <title>Game Day Grill - Amazing & Delicious Food</title>
     <meta name="title" content="Grilli - Amazing & Delicious Food">
   
 
