--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
 
     <div class="container">
         <header>
-            <a href="/index.html" class="logo">
+            <a href="index.html" class="logo">
                 <img src="game-day-grill-high-resolution-logo-white-transparent.png" width="65" height="60" alt="Game Day Grill - Home">
             </a>
             <div class="iconCart">
