--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
           </li>
 
           <li class="navbar-item">
-            <a href="./online/main.html" class="navbar-link hover-underline">
+            <a href="main.html" class="navbar-link hover-underline">
               <div class="separator"></div>
 
               <span class="span">Online Ordering</span>
