--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
   <header class="header" data-header>
     <div class="container">
 
-      <a href="#" class="logo">
-        <img src="./assets/images/game-day-grill-high-resolution-logo-white-transparent.png" width="60" height="50" alt="Grilli - Home">
+      <a href="index.html" class="logo">
+        <img src="./assets/images/game-day-grill-high-resolution-logo-white-transparent.png" width="60" height="50" alt="Game Day Grill - Home">
       </a>
 
       <nav class="navbar" data-navbar>
@@ -123,8 +123,8 @@
           <ion-icon name="close-outline" aria-hidden="true"></ion-icon>
         </button>
 
-        <a href="#" class="logo">
-          <img src="./assets/images/logo.svg" width="160" height="50" alt="Grilli - Home">
+        <a href="index.html" class="logo">
+          <img src="./assets/images/game-day-grill-high-resolution-logo-white-transparent.png" width="60" height="50" alt="Game Day Grill - Home">
         </a>
 
         <ul class="navbar-list">
@@ -242,7 +242,7 @@
               Featuring Gourmet Foods for your enjoyment
             </p>
 
-            <a href="#" class="btn btn-primary slider-reveal">
+            <a href="menu.html" class="btn btn-primary slider-reveal">
               <span class="text text-1">View Our Menu</span>
 
               <span class="text text-2" aria-hidden="true">View Our Menu</span>
