--- a/checkout.html
+++ b/checkout.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Game Day Grill - Amazing & Delicious Food</title>
+    <meta name="title" content="Game Day Grill - Amazing & Delicious Food">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
