--- a/checkout.html
+++ b/checkout.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Day Grill - Amazing & Delicious Food</title>
     <meta name="title" content="Game Day Grill - Amazing & Delicious Food">
+    <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
