--- a/Contact.html
+++ b/Contact.html
@@ -10,7 +10,7 @@
     - primary meta tags
   -->
   <title>Game Day Grill - Amazing & Delicious Food</title>
-  <meta name="title" content="Grilli - Amazing & Delicious Food">
+  <meta name="title" content="Game Day Grill - Amazing & Delicious Food">
   <!-- 
     - favicon
   -->
