--- a/Reservation.html
+++ b/Reservation.html
@@ -9,9 +9,8 @@
   <!-- 
     - primary meta tags
   -->
-  <title>Grilli - Amazing & Delicious Food</title>
-  <meta name="title" content="Grilli - Amazing & Delicious Food">
-  <meta name="description" content="This is a Restaurant html template made by codewithsadee">
+  <title>Game Day Grill - Amazing & Delicious Food</title>
+  <meta name="title" content="Game Day Grill - Amazing & Delicious Food">
 
   <!-- 
     - favicon
