--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
               Featuring Gourmet Foods for your enjoyment
             </p>
 
-            <a href="#" class="btn btn-primary slider-reveal">
+            <a href="menu.html" class="btn btn-primary slider-reveal">
               <span class="text text-1">View Our Menu</span>
 
               <span class="text text-2" aria-hidden="true">View Our Menu</span>
